Sema: Reject generic arguments applied to 'Self'

Previously these were simply ignored.

Fixes https://bugs.swift.org/browse/SR-14731 / rdar://problem/79051797.